--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.1'
 
 services:
   web:
+    # If we want to use a pre-built image, use this instead and comment out the below build step
+    #image: store-website:latest
     build:
       context: .
       dockerfile: Dockerfile
